# mc-pdf2txt

./: .gitignore  README.md  mc-pdf2txt  pyproject.toml  setup.cfg
mc_pdf2txt/: __init__.py  main.py
