[metadata]
name = mc-pdf2txt
version = 0.2.0
description = Multi-column PDF to Text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/mc-pdf2txt
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires = 
    init-attrs-with-kwargs
python_requires = >= 3.8

[options.extras_require]
docopt-ng = docopt-ng
docopt = docopt

[options.entry_points]
console_scripts = 
    mc-pdf2txt = mc_pdf2txt:main
